[package]
name = "io7-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.47", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tower_governor = "0.4"
governor = "0.7"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "json", "time", "macros", "uuid", "migrate"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# Error handling
anyhow = "1.0.99"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Markdown parsing
yaml-front-matter = "0.1"

# Utils
once_cell = "1.20"
uuid = { version = "1.18", features = ["v4", "serde"] }
regex = "1.11.1"
